Fix LibraryTracklist width on mobile devices

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -31,16 +31,6 @@ body,
   overflow: hidden;
 }
 
-.main-layout {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  padding-top: 120px;
-  padding-bottom: 80px;
-}
-
 .main-layout__play-btn {
   position: absolute;
   left: 0;
@@ -77,16 +67,6 @@ body,
 
 .main-page .scroll-container {
   padding-bottom: 80px;
-}
-
-.library-page {
-  width: 100%;
-  height: 100%;
-}
-
-.library-page .TracklistTable {
-  width: 800px;
-  height: 100%;
 }
 
 .group-page__content {
